# robot_setup

./: README.md
bob/: CMakeLists.txt  package.xml
bob_description/: CMakeLists.txt  package.xml
bob_description/launch/: rviz_ur3.launch  rviz_ur3_calibration.launch  rviz_ur3_calibration_real.launch  rviz_ur3_dual_eef.launch  rviz_ur3_dual_eef_real.launch  rviz_ur3_fts_tool.launch  rviz_ur3_gripper.launch  ur3_dual_eef.launch  ur3_fts.launch  ur3_fts_tool.launch  ur3_gripper.launch
bob_description/meshes/btx/collision/: transporator.stl
bob_description/meshes/newport/collision/: vh3660_opt.stl
bob_description/meshes/newport/visual/: vh3660_opt_simple.dae
bob_description/meshes/udes/collision/: fts_tool.stl  pipette_tool.stl  stylus.stl  (+2 more)
bob_description/rviz/: ur3.rviz  ur3_calibration.rviz  ur3_calibration_real.rviz  ur3_dual_eef.rviz  ur3_dual_eef_real.rviz  ur3_fts_tool.rviz  ur3_gripper.rviz
bob_description/urdf/: ur3.urdf.xacro  ur3_dual_eef.urdf.xacro  ur3_fts.urdf.xacro  ur3_fts_tool.urdf.xacro  ur3_gripper.urdf.xacro
bob_description/urdf/component/: fts_tool.urdf.xacro  lab_d8_3023.urdf.xacro  newport_vh3660_opt.urdf.xacro  pipette_tool.urdf.xacro  ur3_mounting_plate.urdf.xacro
bob_description/urdf/robotiq_2f_140/: robotiq_2f_140.urdf.xacro  robotiq_2f_140.xacro
bob_description/urdf/robotiq_c062_a159/: robotiq_c062_a159.urdf.xacro  robotiq_c062_a159.xacro
bob_description/urdf/robotiq_ft_300/: robotiq_ft_300.urdf.xacro  robotiq_ft_300.xacro
bob_description/urdf/robotiq_grp_cpl_062/: robotiq_grp_cpl_062.urdf.xacro  robotiq_grp_cpl_062.xacro
(+58 files in other folders)
