<?xml version="1.0"?>
<package format="2">
  <name>bob_description</name>
  <version>0.0.7</version>
  <description>
  This package provides models used by the robotic platform bob.
  </description>
  <maintainer email="cpt-yoshi@gmail.com">Captain Yoshi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
